--- a/html/history.html
+++ b/html/history.html
@@ -132,7 +132,7 @@
                                     <div class="timelineLight tl" style="width: 100%; overflow: hidden; margin-left: auto; margin-right: auto; text-align: center; height: auto; display: block;">
                                         <div class="timeline_items_wrapper">
                                             <div class="timeline_items_holder" style="width: 300px; margin-left: auto; margin-right: auto;">
-                             <div class="timeline_items" style="text-align: left; width: 27310px; margin-left: -5900px;">
+                             <div class="timeline_items" style="text-align: left; width: 27310px; margin-left: -380px;">
                                         <div class="item" data-id="1846/13/2015" data-count="0" style="padding-left: 0px; padding-right: 0px; margin-left: -30px; float: left; position: relative; user-select: none;">
                                             <div class="wrapper-magnifier-timeline" style="height: 220px; user-select: none;">
                                                 <a class="video_open" data-src="/special/2015/2015-jc130/cht20151217/special_2015-jc130_cht20151217" data-img="../images/video-black.jpg" title="130年與香港同步" style="user-select: none;">
@@ -999,12 +999,12 @@
                                         <div class="timeline_line" style="text-align: left; position:relative; margin-left:auto; margin-right:auto;">
                                             <div id="t_line_left" style="position: absolute;left: -13px;display:none;"></div><div id="t_line_right" style="position: absolute;right: -13px;"></div>
                                             <div class="t_line_holder" style="position:relative; overflow: hidden; width:100%;">
-                                                <div class="t_line_wrapper" style="white-space: nowrap; margin-left: -100%;">
+                                                <div class="t_line_wrapper" style="white-space: nowrap; margin-left: 0;">
                                                     <div class="t_line_view" data-id="0" style="position:relative; display:inline-block;">
                                                         <div class="t_line_m" style="position:absolute; top:0;">
                                                             <h4 class="t_line_month" style="position:abolute; width:100% top:0; text-align:center;"></h4>
                                                             <a href="#1846/13/2015" class="t_line_node" style="left: 8.66667%; position: absolute; text-align: center; margin-left: -15.5px;"><div style="position: relative; top: -35px;">1846</div></a>
-                                                            <a href="#1873/13/2015" class="t_line_node" style="left: 25.3333%; position: absolute; text-align: center; margin-left: -15px;"><div style="position: relative; top: 8px;">1873</div></a>
+                                                            <a href="#1873/13/2015" class="t_line_node active" style="left: 25.3333%; position: absolute; text-align: center; margin-left: -15px;"><div style="position: relative; top: 8px;">1873</div></a>
                                                             <a href="#1884/13/2015" class="t_line_node" style="left: 42%; position: absolute; text-align: center; margin-left: -15px;"><div style="position: relative; top: -35px;">1884</div></a>
                                                             <a href="#1915/13/2015" class="t_line_node" style="left: 58.6667%; position: absolute; text-align: center; margin-left: -15px;"><div style="position: relative; top: 8px;">1915</div></a>
                                                             <a href="#1931/13/2015" class="t_line_node" style="left: 75.3333%; position: absolute; text-align: center; margin-left: -15px;"><div style="position: relative; top: -35px;">1931</div></a>
@@ -1035,7 +1035,7 @@
                                                         <a href="#1980/16/2015" class="t_line_node" style="left: 8.66667%; position: absolute; text-align: center; margin-left: -15px;"><div style="position: relative; top: -35px;">1980</div></a>
                                                         <a href="#1981/16/2015" class="t_line_node" style="left: 25.3333%; position: absolute; text-align: center; margin-left: -15.5px;"><div style="position: relative; top: 8px;">1981</div></a>
                                                         <a href="#1982/16/2015" class="t_line_node" style="left: 42%; position: absolute; text-align: center; margin-left: -15px;"><div style="position: relative; top: -35px;">1982</div></a>
-                                                        <a href="#1983/16/2015" class="t_line_node active" style="left: 58.6667%; position: absolute; text-align: center; margin-left: -15.5px;"><div style="position: relative; top: 8px;">1983</div></a>
+                                                        <a href="#1983/16/2015" class="t_line_node" style="left: 58.6667%; position: absolute; text-align: center; margin-left: -15.5px;"><div style="position: relative; top: 8px;">1983</div></a>
                                                         <a href="#1985/16/2015" class="t_line_node" style="left: 75.3333%; position: absolute; text-align: center; margin-left: -15px;"><div style="position: relative; top: -35px;">1985</div></a>
                                                         <a href="#1988/16/2015" class="t_line_node" style="left: 92%; position: absolute; text-align: center; margin-left: -15.5px;"><div style="position: relative; top: 8px;">1988</div></a>
                                                     </div><!-- KRAJ DRUGOG -->
@@ -1085,7 +1085,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="t_controles"><div class="t_left"></div><div class="t_pause" style="width: 31px; height: 31px; cursor: pointer; display: inline-block; margin-bottom: 20px; background: url(../images/play.png) right top no-repeat scroll transparent;"></div><div class="t_right"></div></div></div>
+                                        <!--<div class="t_controles"><div class="t_left"></div><div class="t_pause" style="width: 31px; height: 31px; cursor: pointer; display: inline-block; margin-bottom: 20px; background: url(../images/play.png) right top no-repeat scroll transparent;"></div><div class="t_right"></div></div></div>-->
                                     <!-- /END TIMELINE -->
                                 </div>
                             </div>
@@ -1121,6 +1121,7 @@
                         </div>
                     </div>
                     <!--CONTENT-->
+                    </div>
                 </div>
             </div>
         </div>
@@ -1165,24 +1166,84 @@
 </body>
 <script type="text/javascript" src="../js/vender/jquery.js"></script>
 <script>
-    /*var placeMap = {
-        '#1846/13/2015':'-150px',
-        '#1873/13/2015':'-380px',
-        '#1873/13/2015':'-610px',
-        '#1873/13/2015':'-840px',
-        '#1873/13/2015':'-1070px',
-    }*/
+
     $(function(){
         var timeline_items = $('.timeline_items');
         var t_line_node = $('.t_line_wrapper>.t_line_view>.t_line_m>a.t_line_node');
+        var t_line_left = $('#t_line_left');
+        var t_line_right = $('#t_line_right');
+        var t_line_wrapper = $('.t_line_wrapper');
         var placeMap = {};
         t_line_node.each(function(index,item){
-            placeMap[$(this).attr('href')] = (-150 - index * 230);
+
+            switch ($(this).parents('.t_line_view').attr('data-id')){
+                case '0':
+                    placeMap[$(this).attr('href')] = (-150 - (index%12) * 230);
+                    break;
+                case '1':
+                    placeMap[$(this).attr('href')] = (-3140 - (index%12) * 268);
+                    break;
+                case '2':
+                    placeMap[$(this).attr('href')] = (-6590 - (index%12) * 434);
+                    break;
+                case '3':
+                    placeMap[$(this).attr('href')] = (-12800 - (index%12) * 1200);
+                    break;
+            }
+            console.log(placeMap)
             $(this).off('click').on('click',function(){
                 t_line_node.removeClass('active');
                 $(this).toggleClass('active');
                 timeline_items.css('margin-left',placeMap[$(this).attr('href')]);
             });
+        });
+        t_line_right.off('click').on('click',function(e){
+            switch($('.t_line_wrapper>.t_line_view>.t_line_m>a.t_line_node.active').parents('.t_line_view').attr('data-id')){
+                case '0':
+                    timeline_items.css('margin-left','-3140px');
+                    t_line_wrapper.css('margin-left','-100%');
+                    t_line_node.removeClass('active');
+                    $('a[href="#1972/15/2015"]').addClass('active');
+                    t_line_left.show();
+                    break;
+                case '1':
+                    timeline_items.css('margin-left','-6590px');
+                    t_line_wrapper.css('margin-left','-200%');
+                    t_line_node.removeClass('active');
+                    $('a[href="#1989/17/2015"]').addClass('active');
+                    break;
+                case '2':
+                    timeline_items.css('margin-left','-12800px');
+                    t_line_wrapper.css('margin-left','-300%');
+                    t_line_node.removeClass('active');
+                    $('a[href="#2004/19/2015"]').addClass('active');
+                    $(this).hide();
+                    break;
+            }
+        });
+        t_line_left.off('click').on('click',function(e){
+            switch($('.t_line_wrapper>.t_line_view>.t_line_m>a.t_line_node.active').parents('.t_line_view').attr('data-id')){
+                case '3':
+                    timeline_items.css('margin-left','-6590px');
+                    t_line_wrapper.css('margin-left','-200%');
+                    t_line_node.removeClass('active');
+                    $('a[href="#1989/17/2015"]').addClass('active');
+                    t_line_right.show();
+                    break;
+                case '2':
+                    timeline_items.css('margin-left','-3140px');
+                    t_line_wrapper.css('margin-left','-100%');
+                    t_line_node.removeClass('active');
+                    $('a[href="#1972/15/2015"]').addClass('active');
+                    break;
+                case '1':
+                    timeline_items.css('margin-left','80px');
+                    t_line_wrapper.css('margin-left',0);
+                    t_line_node.removeClass('active');
+                    $('a[href="#1846/13/2015"]').addClass('active');
+                    $(this).hide();
+                    break;
+            }
         });
     });
 </script>
