--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
     </header>
     <nav>
         <ul class="ulNav clearfix">
-            <li>馬會概況
+            <li>
+                <a>馬會概況</a>
                 <ul class="subMenu">
                     <li class="subMenuItem"><a href="./html/Introduction.html" class="nav-arrow" target="_blank">目標--使命與核心價值</a></li>
                     <li class="subMenuItem"><a href="./html/Introduction_a.html" class="nav-arrow" target="_blank">行政架構</a></li>
@@ -46,7 +47,8 @@
                     <li class="subMenuItem"><a href="./html/Introduction_h.html" class="nav-arrow" target="_blank">模擬賽馬開獎結果</a></li>
                 </ul>
             </li>
-            <li>成為會員
+            <li>
+                <a>成為會員</a>
                 <ul class="subMenu">
                     <li class="subMenuItem"><a href="./html/member.html" class="nav-arrow" target="_blank">簡介</a></li>
                     <li class="subMenuItem"><a href="./html/member_a.html" class="nav-arrow" target="_blank">會員卡簽賬權</a></li>
@@ -61,7 +63,8 @@
                     <li class="subMenuItem"><a href="./html/member_j .html" class="nav-arrow" target="_blank">電話指南</a></li>
                 </ul>
             </li>
-            <li> 區貢獻及慈善
+            <li>
+                <a>區貢獻及慈善</a>
                 <ul class="subMenu">
                     <li class="subMenuItem"><a href="./html/contribution.html" class="nav-arrow" >青年發展</a></li>
                     <li class="subMenuItem"><a href="./html/contribution_a.html" class="nav-arrow" >長者服務</a></li>
@@ -75,7 +78,8 @@
                     <li class="subMenuItem"><a href="./html/contribution_i.html" class="nav-arrow" >扶貧救急</a></li>
                 </ul>
             </li>
-            <li>馬會知多少
+            <li>
+                <a>馬會知多少</a>
                 <ul class="subMenu">
                     <li class="subMenuItem"><a href="./html/history.html" class="nav-arrow" >重要里程</a></li>
                     <li class="subMenuItem"><a href="./html/history_a.html" class="nav-arrow" >香港賽馬博物館</a></li>
@@ -428,7 +432,9 @@
 </div>
 
 </body>
-<script type="text/javascript" src="js/vender/swiper.min.js"></script>
-<script type="text/javascript" src="js/home.js"></script>
+<script type="text/javascript" src="./js/vender/jquery.js"></script>
+<script type="text/javascript" src="./js/vender/swiper.min.js"></script>
+<script type="text/javascript" src="./js/header.js"></script>
+<script type="text/javascript" src="./js/home.js"></script>
 
 </html>
